--- a/src/app/component/calculador/calculador.component.css
+++ b/src/app/component/calculador/calculador.component.css
@@ -10,7 +10,8 @@ main{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 70rem;
+    width: auto;
+    min-width: 81rem;
     padding: 50px;    
     background-color: #f2f2f2;
 }
@@ -19,5 +20,5 @@ form{
     display: flex;
     align-items: center;
     justify-content: center;    
-    width: 60rem; 
+    width: 75rem; 
 }
