implementando un server con json-server

--- a/src/app/component/calculador/calculador.component.html
+++ b/src/app/component/calculador/calculador.component.html
@@ -88,5 +88,12 @@
     </form>
   </div>
 
-  <div class="container vistaDatos mb-5 border rounded">Vista de datos!</div>
+  <div class="container vistaDatos mb-5 border rounded">
+    <div *ngFor="let presupuesto of presupuestos">
+
+      <h1>{{presupuesto.muro}}</h1>
+  
+    </div>
+  </div>
+  
 </main>
